# sympflow

./: .gitignore  README.md  analyseHenonHeiles.ipynb  comparison_srnn.sh  generatePlots.py  generatePlotsSupervised.py  iterativePlotsHenonHeiles.sh  iterativePlotsSRNN.sh  iterativePlotsSupervised.sh  iterativePlotsUnsupervised.sh  iterativeTrainHenonHeiles.sh  main.py  mainSupervised.py  pyproject.toml  run_srnn_eval.py  run_srnn_train.py  run_unsupervised.sh  testDampedOscillator.sh
scripts/: experiments.py  model_quality_core.py  networks.py  plotting.py  sampling.py  settings.py  srnn_model.py  training.py  utils.py  utilsPoincareSection.py  vector_fields.py
scripts/evaluation/: run_henon_heiles_poincare.py  run_merge_quality_csv.py  run_model_quality_eval.py  run_model_quality_plots.py  run_model_quality_table.py  run_quality_comparison_table.py
unsupervisedNetworks/savedModels/HenonHeiles/hamReg/: trained_model_20250604_222437.pt
unsupervisedNetworks/savedModels/HenonHeiles/mixed/: trained_model_20250605_000824.pt
unsupervisedNetworks/savedModels/HenonHeiles/noHamReg/: trained_model_20250604_235857.pt
unsupervisedNetworks/savedModels/HenonHeiles/pinnNoReg/: trained_model_20250604_180133.pt
unsupervisedNetworks/savedModels/HenonHeiles/pinnReg/: trained_model_20250604_175536.pt
unsupervisedNetworks/savedModels/SimpleHO/hamReg/: trained_model_20250604_162439.pt
unsupervisedNetworks/savedModels/SimpleHO/mixed/: trained_model_20250604_181057.pt
unsupervisedNetworks/savedModels/SimpleHO/noHamReg/: trained_model_20250604_174817.pt
unsupervisedNetworks/savedModels/SimpleHO/pinnNoReg/: trained_model_20250604_144750.pt
unsupervisedNetworks/savedModels/tmpFiles/: DampedHO_0.1_pinnNoReg_bestModel.pt  DampedHO_0.1_pinnReg_bestModel.pt  HenonHeiles_hamReg_bestModel.pt  HenonHeiles_mixed_bestModel.pt  HenonHeiles_noHamReg_bestModel.pt  HenonHeiles_pinnNoReg_bestModel.pt  HenonHeiles_pinnReg_bestModel.pt  SimpleHO_hamReg_bestModel.pt  SimpleHO_mixed_bestModel.pt  SimpleHO_noHamReg_bestModel.pt  SimpleHO_pinnNoReg_bestModel.pt  SimpleHO_pinnReg_bestModel.pt
(+1 files in other folders)
